updagraded users and notes api and storage
