# api/docs/swagger.json
@@ -10,11 +10,6 @@
     "paths": {
         "/auth/login": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "log in with email password after verifing user",
                 "consumes": [
                     "application/json"
@@ -356,6 +351,13 @@
                 "summary": "Update a note",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "User",
                         "name": "user",
                         "in": "body",
@@ -541,13 +543,48 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/users/me": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
+                "description": "Get a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get a user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "get": {
                 "description": "Get a user",
                 "consumes": [
                     "application/json"
@@ -608,13 +645,6 @@
                 "summary": "Update a user",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "User",
                         "name": "user",
                         "in": "body",
@@ -668,15 +698,6 @@
                     "user"
                 ],
                 "summary": "Delete a user",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -722,8 +743,7 @@
             "type": "object",
             "required": [
                 "description",
-                "title",
-                "user_id"
+                "title"
             ],
             "properties": {
                 "description": {
@@ -734,9 +754,6 @@
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 2
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
